crates/forge_app/src/snapshots/forge_app__operation__tests__fs_patch_with_warning_special_chars.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# File Diff

- **Path**: /home/user/test.zsh
- **Total Lines**: 3

```
1 1 | line1
  2 |+new line
2 3 | line2
```

## Warning

### Message

Syntax validation failed

### File

- **Path**: /home/user/test.zsh

### Details

The file was written successfully but contains 3 syntax error(s)

### Error

- **Line**: 22
- **Column**: 1

```
Syntax error at 'function dim() { echo "${_DIM}${1}${RESET}"'
```

### Error

- **Line**: 25
- **Column**: 5

```
Unexpected token
```

### Error

- **Line**: 30
- **Column**: 10

```
Missing closing brace
```

### Suggestion

Review and fix the syntax issues
