crates/forge_app/src/snapshots/forge_app__operation__tests__fs_read_basic.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file_content
  path="/home/user/test.txt"
  display_lines="1-2"
  total_lines="2"
><![CDATA[Hello, world!
This is a test file.]]>
</file_content>
