crates/forge_app/src/snapshots/forge_app__operation__tests__fs_read_with_explicit_range.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file_content
  path="/home/user/test.txt"
  display_lines="2-3"
  total_lines="3"
><![CDATA[Line 1
Line 2
Line 3]]>
</file_content>
