crates/forge_app/src/snapshots/forge_app__operation__tests__fs_read_with_truncation_path.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file_content
  path="/home/user/large_file.txt"
  display_lines="1-100"
  total_lines="1"
><![CDATA[Truncated content]]>
</file_content>
