crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_case_insensitive.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 3
- **Display Lines**: 1-3
- **Pattern**: Error

```
log.txt:10:ERROR: Connection failed
log.txt:15:error in processing
log.txt:20:Error: Invalid input
```
