crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_count_mode.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 3
- **Display Lines**: 1-3
- **Pattern**: Test

```
file1.rs:5
file2.rs:3
file3.rs:12
```
