crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_files_with_matches_mode.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Search Results

- **Path**: /home/user/project
- **Max Bytes Allowed**: 256000
- **Total Lines**: 2
- **Display Lines**: 1-2
- **Pattern**: Test

```
file1.rs
file2.rs
```
